--- a/www/manifest.json
+++ b/www/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "My Ionic App",
-  "short_name": "My Ionic App",
+  "name": "Material Supply Hub",
+  "short_name": "Material Supply Hub",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
